--- a/authors.tex
+++ b/authors.tex
@@ -1,133 +1,140 @@
 \iflatexml
-Anisha Keshavan\footnote[1]{Neurology, UCSF, San Francisco, CA},
+Anisha Keshavan\footnote[1]{UC Berkeley - UCSF Graduate Program in Bioengineering, San Francisco, USA},
 Friedmann Paul\footnote[2]{Charite Universitatsmedizin, Germany},
 Mona K. Beyer\footnote[3]{Department of Neurology, Oslo University Hospital and University of Oslo},
-Alyssa H. Zhu\footnote[1]{Neurology, UCSF, San Francisco, CA},
-Nico Papinutto\footnote[1]{Neurology, UCSF, San Francisco, CA},
-William Stern\footnote[1]{Neurology, UCSF, San Francisco, CA},
+Alyssa H. Zhu\footnote[4]{Department of Neurology, University California, San Francisco,  USA},
+Nico Papinutto\footnote[4]{Department of Neurology, University California, San Francisco,  USA},
+Russel Shinohara\footnote[5]{Department of Biostatistics and Epidemiology, Center for Clinical Epidemiology and Biostatistics, Perelman School of Medicine, University of Pennsylvania, Philadelphia, USA}
+William Stern\footnote[4]{Department of Neurology, University California, San Francisco,  USA},
 %alphabetical
-Michael Amann\footnote[13]{University Hospital, Basel, Switzerland},
-Rohit Bakshi\footnote[4]{Brigham and Women's Hospital, MA, United States},
-Antje Bischof\footnote[1]{Neurology, UCSF, San Francisco, CA},
-Alessandro Carriero\footnote[1]{Department of Translational Medicine, Department of Radiology,  UPO University, Via Solaroli 17, 28100, Novara, Italy},
-Manuel Comabella\footnote[5]{Vall d’Hebron Hospital Barcelona, Barcelona, Spain},
-Jason C. Crane\footnote[1]{Neurology, UCSF, San Francisco, CA},
-Sandra D’Alfonso\footnote[6]{Eastern Piedmont University, Novara, Italy},
-Benedicte Dubois\footnote[7]{KU Leuven, Leuven, Belgium}
-Massimo Filippi\footnote[8]{Scientific Institute Ospedale San Raffaele, Italy}
-Bertrand Fontaine\footnote[9]{Hôpital Pitié-Salpêtrière, ICM, UPMC 06 UM 75, INSERM U 1127, CNRS UMR 7225, ICM-A-IHU, AP-HP:  
+Michael Amann\footnote[6]{University Hospital, Basel, Switzerland},
+Rohit Bakshi\footnote[7]{Brigham and Women's Hospital, MA, United States},
+Antje Bischof\footnote[4]{Department of Neurology, University California, San Francisco,  USA},
+Alessandro Carriero\footnote[8]{Department of Translational Medicine, Department of Radiology,  UPO University, Via Solaroli 17, 28100, Novara, Italy},
+Manuel Comabella\footnote[9]{Vall d’Hebron Hospital Barcelona, Barcelona, Spain},
+Jason C. Crane\footnote[10]{Department of Radiology and Biomedical Imaging, University California, San Francisco, CA, USA},
+Sandra D’Alfonso\footnote[11]{Eastern Piedmont University, Novara, Italy},
+Benedicte Dubois\footnote[12]{KU Leuven, Leuven, Belgium}
+Massimo Filippi\footnote[13]{Scientific Institute Ospedale San Raffaele, Italy}
+Bertrand Fontaine\footnote[14]{Hôpital Pitié-Salpêtrière, ICM, UPMC 06 UM 75, INSERM U 1127, CNRS UMR 7225, ICM-A-IHU, AP-HP:  
 Pôle des maladies du système nerveux, 47 boulevard de l'Hôpital, 75013  
 Paris, France.}
-Ann Goris\footnote[7]{KU Leuven, Leuven, Belgium}
-Laura Gaetano\footnote[13]{University Hospital, Basel, Switzerland},
-Sergiu Groppa\footnote[10]{Klinik und Poliklinik für Neurologie, Mainz, Germany}
-David Hafler\footnote[11]{Yale University, CT, United States}
+Ann Goris\footnote[12]{KU Leuven, Leuven, Belgium}
+Laura Gaetano\footnote[6]{University Hospital, Basel, Switzerland},
+Sergiu Groppa\footnote[15]{Klinik und Poliklinik für Neurologie, Mainz, Germany}
+David Hafler\footnote[16]{Yale University, CT, United States}
 Hanne F. Harbo\footnote[3]{Department of Neurology, Oslo University Hospital and University of Oslo},
-Bernhard Hemmer\footnote[12]{Technische Universität München, Munich, Germany}
-Kesshi Jordan\footnote[1]{Neurology, UCSF, San Francisco, CA},
-Ludwig Kappos\footnote[13]{University Hospital, Basel, Switzerland}
-Gina Kirkish\footnote[1]{Neurology, UCSF, San Francisco, CA},
-Sara Llufriu\footnote[14]{Hospital Clinic Barcelona, IDIBAPS, Barcelona, Spain}
-Stefano Magon\footnote[13]{University Hospital, Basel, Switzerland},
-Filippo Martinelli-Boneschi\footnote[8]{Scientific Institute Ospedale San Raffaele, Italy}
-Jacob McCauley\footnote[15]{University of Miami, Miami, USA}
-Xavier Montalban\footnote[5]{Vall d’Hebron Hospital Barcelona, Barcelona, Spain},
-Mark Muhlau\footnote[12]{Technische Universität München, Munich, Germany}
-Daniel Pelletier\footnote[11]{Yale University, CT, United States}
-Margaret Pericak-Vance\footnote[15]{University of Miami, Miami, USA}
-Isabelle Rebeix\footnote[9]{Hôpital Pitié-Salpêtrière, ICM, UPMC 06 UM 75, INSERM U 1127, CNRS UMR 7225, ICM-A-IHU, AP-HP:  
+Bernhard Hemmer\footnote[17]{Technische Universität München, Munich, Germany}
+Kesshi Jordan\footnote[1]{UC Berkeley - UCSF Graduate Program in Bioengineering, San Francisco, USA},
+Ludwig Kappos\footnote[6]{University Hospital, Basel, Switzerland}
+Gina Kirkish\footnote[4]{Department of Neurology, University California, San Francisco,  USA},
+Sara Llufriu\footnote[18]{Hospital Clinic Barcelona, IDIBAPS, Barcelona, Spain}
+Stefano Magon\footnote[6]{University Hospital, Basel, Switzerland},
+Filippo Martinelli-Boneschi\footnote[13]{Scientific Institute Ospedale San Raffaele, Italy}
+Jacob McCauley\footnote[19]{University of Miami, Miami, USA}
+Xavier Montalban\footnote[9]{Vall d’Hebron Hospital Barcelona, Barcelona, Spain},
+Mark Muhlau\footnote[17]{Technische Universität München, Munich, Germany}
+Daniel Pelletier\footnote[16]{Yale University, CT, United States}
+Margaret Pericak-Vance\footnote[19]{University of Miami, Miami, USA}
+Isabelle Rebeix\footnote[14]{Hôpital Pitié-Salpêtrière, ICM, UPMC 06 UM 75, INSERM U 1127, CNRS UMR 7225, ICM-A-IHU, AP-HP:  
 Pôle des maladies du système nerveux, 47 boulevard de l'Hôpital, 75013  
 Paris, France.}
-Maria Rocca\footnote[8]{Scientific Institute Ospedale San Raffaele, Italy}
-Alex Rovira\footnote[5]{Vall d’Hebron Hospital Barcelona, Barcelona, Spain},
-Regina Schlaeger\footnote[1]{Neurology, UCSF, San Francisco, CA},
-Albert Saiz\footnote[14]{Hospital Clinic Barcelona, IDIBAPS, Barcelona, Spain}
-Till Sprenger\footnote[13]{University Hospital, Basel, Switzerland},
-Alessandro Stecco\footnote[6]{Section of Neuroradiology, Department of Radiology, Maggiore Hospital, Novara, Italy, Corso Mazzini 18, 28100},
-Bernard Uitdehaag\footnote[16]{Academic Hospital Vrije Universiteit, Netherlands},
-Pablo Villoslada\footnote[14]{Hospital Clinic Barcelona, IDIBAPS, Barcelona, Spain},
-Mike Wattjes\footnote[16]{Academic Hospital Vrije Universiteit, Netherlands},
-Howard Weiner\footnote[4]{Brigham and Women's Hospital, MA, United States},
+Maria Rocca\footnote[13]{Scientific Institute Ospedale San Raffaele, Italy}
+Alex Rovira\footnote[9]{Vall d’Hebron Hospital Barcelona, Barcelona, Spain},
+Regina Schlaeger\footnote[4]{Department of Neurology, University California, San Francisco,  USA},
+Albert Saiz\footnote[18]{Hospital Clinic Barcelona, IDIBAPS, Barcelona, Spain}
+Till Sprenger\footnote[6]{University Hospital, Basel, Switzerland},
+Alessandro Stecco\footnote[20]{Section of Neuroradiology, Department of Radiology, Maggiore Hospital, Novara, Italy, Corso Mazzini 18, 28100},
+Bernard Uitdehaag\footnote[21]{Academic Hospital Vrije Universiteit, Netherlands},
+Pablo Villoslada\footnote[18]{Hospital Clinic Barcelona, IDIBAPS, Barcelona, Spain},
+Mike Wattjes\footnote[21]{Academic Hospital Vrije Universiteit, Netherlands},
+Howard Weiner\footnote[7]{Brigham and Women's Hospital, MA, United States},
 Jens Wurfel\footnote[2]{Charite Universitatsmedizin, Germany},
-Claus Zimmer\footnote[12]{Dept. Neuroradiology, Klinikum rechts der Isar, Technische Universität München, Munich, Germany}
-Frauke Zipp\footnote[10]{Klinik und Poliklinik für Neurologie, Mainz, Germany},
+Claus Zimmer\footnote[22]{Dept. Neuroradiology, Klinikum rechts der Isar, Technische Universität München, Munich, Germany}
+Frauke Zipp\footnote[15]{Klinik und Poliklinik für Neurologie, Mainz, Germany},
 %last and not alphabetical
 International Multiple Sclerosis Genetics Consortium,
-Stephen Hauser\footnote[1]{Neurology, UCSF, San Francisco, CA},
-Jorge Oksenberg\footnote[1]{Neurology, UCSF, San Francisco, CA},
-Roland Henry\footnote[1]{Neurology, UCSF, San Francisco, CA}
+Stephen Hauser\footnote[4]{Department of Neurology, University California, San Francisco,  USA},
+Jorge Oksenberg\footnote[4]{Department of Neurology, University California, San Francisco,  USA},
+Roland Henry\footnote[1,4,10]{UC Berkeley - UCSF Graduate Program in Bioengineering,  & Department of Neurology, University California San Francisco & Department of Radiology and Biomedical Imaging, University California San Francisco, USA}
 
 \else % PDF export commands go here
-\author[1]{Anisha Keshavan}
+\author[1,4]{Anisha Keshavan}
 \author[2]{Friedmann Paul}
 \author[3]{Mona K. Beyer}
-\author[1]{Alyssa Zhu}
-\author[1]{Nico Papinutto}
-\author[1]{William Stern}
+\author[4]{Alyssa Zhu}
+\author[4]{Nico Papinutto}
+\author[5]{Russell Shinohara}
+\author[4]{William Stern}
 %alphabetical
-\author[13]{Michael Aman}
-\author[4]{Rohit Bakshi}
-\author[1]{Antje Bischof}
-\author[6] {Alessandro Carriero}
-\author[5]{Manuel Comabella}
-\author[1]{Jason C. Crane}
-\author[6]{Sandra D’Alfonso}
-\author[7]{Benedicte Dubois}
-\author[8]{Massimo Filippi}
-\author[9]{Bertrand Fontaine}
-\author[7]{Ann Goris}
-\author[13]{Laura Gaetano}
-\author[10]{Sergiu Groppa}
-\author[11]{David Hafler}
+\author[6]{Michael Aman}
+\author[7]{Rohit Bakshi}
+\author[4]{Antje Bischof}
+\author[8] {Alessandro Carriero}
+\author[9]{Manuel Comabella}
+\author[10]{Jason C. Crane}
+\author[11]{Sandra D’Alfonso}
+\author[12]{Benedicte Dubois}
+\author[13]{Massimo Filippi}
+\author[14]{Bertrand Fontaine}
+\author[12]{Ann Goris}
+\author[6]{Laura Gaetano}
+\author[15]{Sergiu Groppa}
+\author[16]{David Hafler}
 \author[3]{Hanne F. Harbo}
-\author[12]{Bernhard Hemmer}
+\author[17]{Bernhard Hemmer}
 \author[1]{Kesshi Jordan}
-\author[13]{Ludwig Kappos}
-\author[1]{Gina Kirkish}
-\author[14]{Sara Llufriu}
-\author[13]{Stefano Magon}
-\author[8]{Filippo Martinelli-Boneschi}
-\author[15]{Jacob McCauley}
-\author[5]{Xavier Montalban}
-\author[12]{Mark Muhlau}
-\author[11]{Daniel Pelletier} %somewhere else
-\author[15]{Margaret Pericak-Vance}
-\author[9]{Isabelle Rebeix}
-\author[8]{Maria Rocca}
-\author[5]{Alex Rovira}
-\author[1]{Regina Schlaeger}
-\author[14]{Albert Saiz}
-\author[13]{Till Sprenger} %somewhere else
-\author[6]{Alessandro Stecco}
-\author[16]{Bernard Uitdehaag}
-\author[14]{Pablo Villoslada}
-\author[13]{Mike Wattjes}
-\author[4]{Howard Weiner}
+\author[6]{Ludwig Kappos}
+\author[4]{Gina Kirkish}
+\author[18]{Sara Llufriu}
+\author[6]{Stefano Magon}
+\author[13]{Filippo Martinelli-Boneschi}
+\author[19]{Jacob McCauley}
+\author[9]{Xavier Montalban}
+\author[17]{Mark Muhlau}
+\author[16]{Daniel Pelletier} %somewhere else
+\author[19]{Margaret Pericak-Vance}
+\author[14]{Isabelle Rebeix}
+\author[13]{Maria Rocca}
+\author[9]{Alex Rovira}
+\author[4]{Regina Schlaeger}
+\author[17]{Albert Saiz}
+\author[6]{Till Sprenger} %somewhere else
+\author[20]{Alessandro Stecco}
+\author[21]{Bernard Uitdehaag}
+\author[18]{Pablo Villoslada}
+\author[21]{Mike Wattjes}
+\author[7]{Howard Weiner}
 \author[2]{Jens Wurfel}
-\author[12]{Claus Zimmer}
-\author[10]{Frauke Zipp}
+\author[17]{Claus Zimmer}
+\author[15]{Frauke Zipp}
 %last and not alphabetical
-\author[17]{International Multiple Sclerosis Genetics Consortium}
-\author[1]{Stephen Hauser}
-\author[1]{Jorge Oksenberg}
-\author[1]{Roland Henry}
+\author[22]{International Multiple Sclerosis Genetics Consortium}
+\author[4]{Stephen Hauser}
+\author[4]{Jorge Oksenberg}
+\author[1,4,10]{Roland Henry}
 
 \affil[1]{Neurology, UCSF, San Francisco, CA} 
 \affil[2]{Charite Universitatsmedizin, Germany}
 \affil[3]{Department of Neurology, Oslo University Hospital and University of Oslo}
-\affil[4]{Brigham and Women's Hospital, MA, United States}
-\affil[5]{Vall d’Hebron Hospital Barcelona, Barcelona, Spain}
-\affil[6]{Eastern Piedmont University, Novara, Italy}
-\affil[7]{KU Leuven, Leuven, Belgium}
-\affil[8]{Scientific Institute Ospedale San Raffaele, Italy}
-\affil[9]{Hôpital Pitié-Salpêtrière, Paris, France}
-\affil[10]{Klinik und Poliklinik für Neurologie, Mainz, Germany}
-\affil[11]{Yale University, CT, United States}
-\affil[12]{Dept. Neuroradiology, Klinikum rechts der Isar, Technische Universität München, Munich, Germany}
-\affil[13]{University Hospital, Basel, Switzerland}
-\affil[14]{IDIBAPS, Barcelona, Spain}
-\affil[15]{University of Miami, Miami, USA}
-\affil[16]{Academic Hospital Vrije Universiteit, Netherlands}
-\affil[17]{International Multiple Sclerosis Genetics Consortium}
+\affil[4]{Department of Neurology, University California, San Francisco,  USA}
+\affil[5]{Department of Biostatistics and Epidemiology, Center for Clinical Epidemiology and Biostatistics, Perelman School of Medicine, University of Pennsylvania, Philadelphia, USA}
+\affil[6]{University Hospital, Basel, Switzerland}
+\affil[7]{Brigham and Women's Hospital, MA, United States}
+\affil[8]{Department of Translational Medicine, Department of Radiology,  UPO University, Via Solaroli 17, 28100, Novara, Italy}
+\affil[9]{Vall d’Hebron Hospital Barcelona, Barcelona, Spain}
+\affil[10]{Department of Radiology and Biomedical Imaging, University California, San Francisco, CA, USA}
+\affil[11]{Eastern Piedmont University, Novara, Italy}
+\affil[12]{KU Leuven, Leuven, Belgium}
+\affil[13]{Scientific Institute Ospedale San Raffaele, Italy}
+\affil[14]{Hôpital Pitié-Salpêtrière, Paris, France}
+\affil[15]{Klinik und Poliklinik für Neurologie, Mainz, Germany}
+\affil[16]{Yale University, CT, United States}
+\affil[17]{Dept. Neuroradiology, Klinikum rechts der Isar, Technische Universität München, Munich, Germany}
+\affil[18]{IDIBAPS, Barcelona, Spain}
+\affil[19]{University of Miami, Miami, USA}
+\affil[20]{Section of Neuroradiology, Department of Radiology, Maggiore Hospital, Novara, Italy, Corso Mazzini 18, 28100}
+\affil[21]{Academic Hospital Vrije Universiteit, Netherlands}
+\affil[22]{International Multiple Sclerosis Genetics Consortium}
 
 \fi
