--- a/authors.tex
+++ b/authors.tex
@@ -59,7 +59,7 @@ Jorge Oksenberg\footnote[4]{Department of Neurology, University California, San 
 Roland Henry\footnote[1,4,10]{UC Berkeley - UCSF Graduate Program in Bioengineering,  & Department of Neurology, University California San Francisco & Department of Radiology and Biomedical Imaging, University California San Francisco, USA}
 
 \else % PDF export commands go here
-\author[1,4]{Anisha Keshavan}
+\author[1]{Anisha Keshavan}
 \author[2]{Friedmann Paul}
 \author[3]{Mona K. Beyer}
 \author[4]{Alyssa Zhu}
@@ -114,7 +114,7 @@ Roland Henry\footnote[1,4,10]{UC Berkeley - UCSF Graduate Program in Bioengineer
 \author[4]{Jorge Oksenberg}
 \author[1,4,10]{Roland Henry}
 
-\affil[1]{Neurology, UCSF, San Francisco, CA} 
+\affil[1]{UC Berkeley - UCSF Graduate Program in Bioengineering, San Francisco, USA} 
 \affil[2]{Charite Universitatsmedizin, Germany}
 \affil[3]{Department of Neurology, Oslo University Hospital and University of Oslo}
 \affil[4]{Department of Neurology, University California, San Francisco,  USA}
