--- a/authors.tex
+++ b/authors.tex
@@ -115,8 +115,8 @@ Roland Henry\footnote[1,4,10]{UC Berkeley - UCSF Graduate Program in Bioengineer
 \author[1,4,10]{Roland Henry}
 
 \affil[1]{UC Berkeley - UCSF Graduate Program in Bioengineering, San Francisco, USA} 
-\affil[2]{Charite Universitatsmedizin, Germany}
-\affil[3]{Department of Neurology, Oslo University Hospital and University of Oslo}
+\affil[2]{Charite Universitatsmedizin, Berlin, Germany}
+\affil[3]{Department of Neurology, Oslo University Hospital and University of Oslo, Oslo, Norway}
 \affil[4]{Department of Neurology, University California, San Francisco,  USA}
 \affil[5]{Department of Biostatistics and Epidemiology, Center for Clinical Epidemiology and Biostatistics, Perelman School of Medicine, University of Pennsylvania, Philadelphia, USA}
 \affil[6]{University Hospital, Basel, Switzerland}
@@ -127,11 +127,11 @@ Roland Henry\footnote[1,4,10]{UC Berkeley - UCSF Graduate Program in Bioengineer
 \affil[11]{Eastern Piedmont University, Novara, Italy}
 \affil[12]{KU Leuven, Leuven, Belgium}
 \affil[13]{Scientific Institute Ospedale San Raffaele, Italy}
-\affil[14]{Hôpital Pitié-Salpêtrière, Paris, France}
+\affil[14]{Hôpital Pitié-Salpêtrière, ICM, UPMC 06 UM 75, INSERM U 1127, CNRS UMR 7225, ICM-A-IHU, AP-HP: Pôle des maladies du système nerveux, 47 boulevard de l'Hôpital, 75013, Paris, France}
 \affil[15]{Klinik und Poliklinik für Neurologie, Mainz, Germany}
 \affil[16]{Yale University, CT, United States}
 \affil[17]{Dept. Neuroradiology, Klinikum rechts der Isar, Technische Universität München, Munich, Germany}
-\affil[18]{IDIBAPS, Barcelona, Spain}
+\affil[18]{Hospital Clinic Barcelona, IDIBAPS, Barcelona, Spain}
 \affil[19]{University of Miami, Miami, USA}
 \affil[20]{Section of Neuroradiology, Department of Radiology, Maggiore Hospital, Novara, Italy, Corso Mazzini 18, 28100}
 \affil[21]{Academic Hospital Vrije Universiteit, Netherlands}
