--- a/authors.tex
+++ b/authors.tex
@@ -112,7 +112,7 @@ Roland Henry\footnote[1,4,10]{UC Berkeley - UCSF Graduate Program in Bioengineer
 \author[22]{International Multiple Sclerosis Genetics Consortium}
 \author[4]{Stephen Hauser}
 \author[4]{Jorge Oksenberg}
-\author[1,4,10]{Roland Henry}
+\author[1,4,10]{Roland G. Henry}
 
 \affil[1]{UC Berkeley - UCSF Graduate Program in Bioengineering, San Francisco, USA} 
 \affil[2]{Charite Universitatsmedizin, Berlin, Germany}
