--- a/authors.tex
+++ b/authors.tex
@@ -69,7 +69,7 @@ Roland Henry\footnote[1,4,10]{UC Berkeley - UCSF Graduate Program in Bioengineer
 %alphabetical
 \author[6]{Michael Aman}
 \author[7]{Rohit Bakshi}
-\author[4]{Antje Bischof}
+\author[4,6,23]{Antje Bischof}
 \author[8] {Alessandro Carriero}
 \author[9]{Manuel Comabella}
 \author[10]{Jason C. Crane}
@@ -119,7 +119,7 @@ Roland Henry\footnote[1,4,10]{UC Berkeley - UCSF Graduate Program in Bioengineer
 \affil[3]{Department of Neurology, Oslo University Hospital and University of Oslo, Oslo, Norway}
 \affil[4]{Department of Neurology, University California, San Francisco,  USA}
 \affil[5]{Department of Biostatistics and Epidemiology, Center for Clinical Epidemiology and Biostatistics, Perelman School of Medicine, University of Pennsylvania, Philadelphia, USA}
-\affil[6]{University Hospital, Basel, Switzerland}
+\affil[6]{Department of Neurology, University Hospital, Basel, Switzerland}
 \affil[7]{Brigham and Women's Hospital, MA, United States}
 \affil[8]{Department of Translational Medicine, Department of Radiology,  UPO University, Via Solaroli 17, 28100, Novara, Italy}
 \affil[9]{Vall d’Hebron Hospital Barcelona, Barcelona, Spain}
@@ -136,5 +136,6 @@ Roland Henry\footnote[1,4,10]{UC Berkeley - UCSF Graduate Program in Bioengineer
 \affil[20]{Section of Neuroradiology, Department of Radiology, Maggiore Hospital, Novara, Italy, Corso Mazzini 18, 28100}
 \affil[21]{Academic Hospital Vrije Universiteit, Netherlands}
 \affil[22]{International Multiple Sclerosis Genetics Consortium}
+\affil[23]{Clinical Immunology, University Hospital Basel, Switzerland}
 
 \fi
