--- a/section_Acknowledgements_We_thank_the__.tex
+++ b/section_Acknowledgements_We_thank_the__.tex
@@ -3,4 +3,4 @@
 We thank the study participants, MR technicians, and acknowledge Stephane Lehéricy, Eric Bardinet, Frédéric Humbert and
 Antoine Burgos from the ICM IRM facility (CENIR) and the CIC
 Pitié-Salpêtrière for their expertise. Funding was provided by R01 NS049477, ICM F-75013 Paris, INSERM and IHU-A-ICM
-(ANR-10-IAIHU-06).
+(ANR-10-IAIHU-06). BD is a Clinical Investigator of the Research Foundation Flanders (FWO-Vlaanderen). AG and BD are supported by the Research Fund KU Leuven (OT/11/087) and the Research Foundation Flanders (G0A1313N)
