--- a/bibliography/references.bib
+++ b/bibliography/references.bib
@@ -493,3 +493,13 @@
   title = {{Rating neurologic impairment in multiple sclerosis: An expanded disability status scale ({EDSS})}},
   journal = {Neurology},
 }
+
+@article{droby2015human,
+  title={A human post-mortem brain model for the standardization of multi-centre MRI studies},
+  author={Droby, Amgad and Lukas, Carsten and Sch{\"a}nzer, Anne and Spiwoks-Becker, Isabella and Giorgio, Antonio and Gold, Ralf and De Stefano, Nicola and Kugel, Harald and Deppe, Michael and Wiendl, Heinz and others},
+  journal={NeuroImage},
+  volume={110},
+  pages={11--21},
+  year={2015},
+  publisher={Elsevier}
+}
