--- a/bibliography/references.bib
+++ b/bibliography/references.bib
@@ -503,3 +503,14 @@
   year={2015},
   publisher={Elsevier}
 }
+
+@article{fisher2008gray,
+  title={Gray matter atrophy in multiple sclerosis: a longitudinal study},
+  author={Fisher, Elizabeth and Lee, Jar-Chi and Nakamura, Kunio and Rudick, Richard A},
+  journal={Annals of neurology},
+  volume={64},
+  number={3},
+  pages={255--265},
+  year={2008},
+  publisher={Wiley Online Library}
+}
