--- a/bibliography/references.bib
+++ b/bibliography/references.bib
@@ -514,3 +514,14 @@
   year={2008},
   publisher={Wiley Online Library}
 }
+
+@article{horakova2012clinical,
+  title={Clinical correlates of grey matter pathology in multiple sclerosis},
+  author={Horakova, Dana and Kalincik, Tomas and Dusankova, Jana Blahova and Dolezal, Ondrej},
+  journal={BMC neurology},
+  volume={12},
+  number={1},
+  pages={10},
+  year={2012},
+  publisher={BioMed Central Ltd}
+}
