--- a/tab_cva.tex
+++ b/tab_cva.tex
@@ -5,18 +5,18 @@
 \toprule
 {} &   $CV_{a}$ \\
 \midrule
-Lateral-Ventricle             &  0.03 \\
-CorticalWhiteMatterVol        &  0.02 \\
-CortexVol                     &  0.04 \\
-SubCortGrayVol                &  0.02 \\
-TotalGrayVol                  &  0.04 \\
-EstimatedTotalIntraCranialVol &  0.08 \\
-Caudate                       &  0.04 \\
-Amygdala                      &  0.07 \\
-Hippocampus                   &  0.03 \\
-Thalamus-Proper               &  0.05 \\
+LV             &  0.03 \\
+cWMV        &  0.02 \\
+cVol                     &  0.04 \\
+scGMV                &  0.02 \\
+GMV                  &  0.04 \\
+eTIV &  0.08 \\
+Caud                       &  0.04 \\
+Amyg                      &  0.07 \\
+Hipp                   &  0.03 \\
+Thal               &  0.05 \\
 \bottomrule
 \end{tabular}
-\caption{Coefficient of variability ($CV_{a}$) values for selected ROIs. $CV_{a}$ was defined in equation \ref{eq:cvadef}}
+\caption{Coefficient of variability ($CV_{a}$) values for selected ROIs. $CV_{a}$ was defined in equation \ref{eq:cvadef}. The ROIs are gray matter volume (GMV), subcortical gray matter volume (scGMV), cortex volume (cVol), cortical white matter volume (cWMV, which does not include cerebellar white matter), and the volumes of the lateral ventricle (LV), amygdala (Amyg), thalamus (Thal), hippocampus (Hipp), caudate (Caud), and finally the estimated total intracranial volume (eTIV)}
 \label{tab:cva} 
 \end{table}
