--- a/tab_acquisition2.tex
+++ b/tab_acquisition2.tex
@@ -21,7 +21,7 @@ CVol                     &   0.98 &   0.99 &   0.98 &   0.98 &   0.99 &   0.99 &
 scGMV                &   0.95 &   0.99 &   0.97 &   0.96 &   0.96 &   0.99 &   0.99 &   0.98 &   0.98 &   0.98 \\
 GMV                  &   0.98 &      1 &   0.98 &   0.99 &   0.99 &      1 &   0.98 &   0.98 &   0.99 &   0.99 \\
 eTIV &   0.87 &   0.99 &      1 &      1 &      1 &      1 &      1 &      1 &      1 &   0.97 \\
-caud                       &   0.94 &   0.99 &   0.96 &   0.98 &   0.96 &   0.99 &   0.99 &   0.98 &   0.97 &   0.99 \\
+Caud                       &   0.94 &   0.99 &   0.96 &   0.98 &   0.96 &   0.99 &   0.99 &   0.98 &   0.97 &   0.99 \\
 Amyg                      &   0.93 &   0.98 &   0.93 &   0.84 &   0.92 &   0.87 &    0.9 &   0.86 &   0.86 &   0.91 \\
 Hipp                   &   0.98 &   0.99 &   0.68 &   0.94 &   0.96 &   0.98 &   0.98 &   0.98 &   0.94 &   0.94 \\
 Thal               &    0.9 &   0.96 &   0.88 &   0.99 &   0.88 &   0.84 &   0.94 &    0.9 &   0.58 &   0.62 \\
